--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 }
 
 .item {
+    opacity: 90%;
     margin: 14px 15px;
     height: 50vh;
     padding: 14px 15px;
@@ -44,13 +45,14 @@ nav ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 4px solid #e7e7e7;
+    /* border: 4px solid #e7e7e7; */
     border-radius: 25px;
     /* background-color: #f3f3f3; */
     background-color: transparent;
 }
 
 nav img {
+    cursor: pointer;
     height: 40px;
     margin-right: 10px;
     border-radius: 100%;
@@ -66,7 +68,7 @@ nav li a {
 }
 
 nav li a:hover {
-    color: #333;
+    color: #58b7f6;
 }
 
 #home {
@@ -110,9 +112,9 @@ nav li a:hover {
     font-weight: 700;
     font-family: Montserrat, sans-serif;
     padding: 14px 15px;
-    margin: 4% 6%;
-    border: 2px solid #fff;
+    margin: 1% 2%;
     border-radius: 7px;
+    border: 1px solid #fff;
     background-color: #000;
     color: #fff;
     transition-duration: 1000ms;
@@ -180,14 +182,33 @@ body::before {
     }
 }
 
-.header-container a{
-    color: inherit;
+.header-container i{
+    color: #000;
+    transition-duration: 250ms;
+}
+.header-container i:hover{
+    color: #4b4b4b;
 }
 
 i {
+    cursor: pointer;
     font-size: 1.25rem;
     color: inherit;
     float: left;
     padding: 0px 14px;
     display: inline;
+}
+
+.main a{
+    color: #94baff;
+    transition-duration: 300ms;
+}
+
+.main a:hover {
+    color: #2a5bb7;
+}
+
+.main a:active {
+    color: #162f5e;
+    font-size: 1.15rem;
 }
